--- a/aicdemos/aicdemologin/src/main/res/values/strings.xml
+++ b/aicdemos/aicdemologin/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="title_activity_register">register</string>
     <string name="register_frame">Register</string>
     <string name="login_ok">Successfully logged in</string>
+    <string name="something">Something</string>
 </resources>
