Add NFC support

--- a/aicdemos/aicdemosensor/src/main/res/values/strings.xml
+++ b/aicdemos/aicdemosensor/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="podometer">Podometer</string>
     <string name="rot_vector_sensor">Rotation Vector Sensor</string>
     <string name="cos_rot">Cos</string>
+    <string name="nfc">NFC</string>
 
     <!--Battery fragment-->
     <string name="battery_level_label">Battery level</string>
