--- a/aicdemos/aicdemosensor/src/main/res/values/strings.xml
+++ b/aicdemos/aicdemosensor/src/main/res/values/strings.xml
@@ -50,4 +50,6 @@
     <string name="title_activity_base">BaseActivity</string>
     <string name="action_settings">Settings</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="nfc_message_label">Message : </string>
 </resources>
